--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TravelRoutine</string>
     <string name="reminded_info">You will Reminded at </string>
+    <string name="api_key_news">25bd4439e7564164a9ab567975428415</string>
+    <string name="api_source_news">bbc-news</string>
 </resources>
