--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,10 @@
     <string name="saved">Saved</string>
     <string name="updated">Updated</string>
 
+    <string name="pref_size_label">Size Multiplier</string>
+    <string name="pref_size_key" translatable="false">size</string>
+    <string name="pref_size_default" translatable="false">1</string>
+
     <string-array name="icon_name">
         <item>sad</item>
         <item>happy</item>
